tests/pos/uninterp.hs
measure f :: Int -> Int

one :: {v:Int| f v == f v}
one = 1
